# mipt-par-prog

./: CMakeLists.txt
1-Intro/Src/: DutchWheel.cpp  HelloWorld.cpp  SeriesSum.cpp
2-conv-diff/: note.txt
2-conv-diff/Inc/: ConvDiffSolver.hpp  LayerSolver.hpp  Methods.hpp  Solver.hpp
2-conv-diff/Scripts/: comp.py  plot.py  plot2.py
2-conv-diff/Src/: Admission.cpp  Task.cpp  Test.cpp
3-pthread-intro/Src/: 3-HelloWorld.cpp  3-SequentialAccess.cpp  3-SeriesSum.cpp
4-Integrate/Inc/: AdaptiveGrid.hpp  Integration.hpp
4-Integrate/Scripts/: plot2.py
4-Integrate/Src/: 4-Integrate.cpp
Common/Inc/: Common.hpp
Common/Scripts/: benchmark.py
